--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 id="radio-button"
                 type="radio"
                 name="gender"
+                required
               />
             </label>
           </div>
