--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
           />
 
           <button type="submit">
-            <a class="butn" href="./success.html">Login</a>
+            <a href="./success.html" class="butn">Login</a>
           </button>
         </div>
       </form>
